Fixed-Issue-#1266 Bug Report When a new post is added, the latest post section in the organization's dashboard becomes distorted Updated

--- a/src/components/OrganizationDashCards/CardItem.module.css
+++ b/src/components/OrganizationDashCards/CardItem.module.css
@@ -52,14 +52,14 @@
 }
 
 .cardItem .time {
-  font-size: 0.8rem;
-  font-weight: 300;
-  color: #808080;
+  font-size: var(--bs-font-size-sm);
+  font-weight: var(--bs-font-weight-light);
+  color: var(--bs-gray-600);
 }
 
 .cardItem .creator {
-  font-size: 0.8rem;
-  color: black;
+  font-size: var(--bs-font-size-sm);
+  color: var(--bs-body-color);
 }
 
 .rightCard {
